--- a/nextjs-github-pages/.gitignore
+++ b/nextjs-github-pages/.gitignore
@@ -4,13 +4,15 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
 
 # next.js
 /.next/
-/out/
+# The `out` directory should not be ignored by version control
+# /out/
 
 # production
 /build
@@ -23,18 +25,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*
-!.env.example
+.env*.local
 
 # vercel
 .vercel
 
-# stackbit
-.cache
-.stackbit/cache
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# Local Netlify folder
-.netlify
+.vscode
